--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .container {
-    @apply mx-auto max-w-[90rem] px-2 sm:px-3 lg:px-4
+    @apply mx-auto max-w-7xl px-8
 }
 
 .active {
